Fix overflow x comentarios

--- a/src/app/views/publicaciones/components/comments/comments.component.scss
+++ b/src/app/views/publicaciones/components/comments/comments.component.scss
@@ -48,7 +48,7 @@ h6.user:hover {
 p.text {
     margin-bottom: 0;
     color: $text-color !important;
-    font-size: 14px
+    font-size: 12px
 }
 
 .ml-auto {
